--- a/css/style.css
+++ b/css/style.css
@@ -518,14 +518,13 @@ textarea {
     display: inline-block; }
   .secondary-nav ul {
     margin: 0 0 24px; }
-  .secondary-nav li {
-    display: inline-block; }
   .secondary-nav li a {
     background-color: yellow;
     font-family: "Archivo Black", sans-serif;
     color: #000;
-    padding: 6px 12px;
-    font-size: 2.25vmin; }
+    padding: 6px 12px 0;
+    font-size: 2.25vmin;
+    display: block; }
   .pagination {
     font-size: 2.25vmin;
     font-family: "Archivo Black", sans-serif;
@@ -541,7 +540,8 @@ textarea {
     background-color: yellow;
     font-family: "Archivo Black", sans-serif;
     color: #000;
-    padding: 6px 12px; }
+    padding: 6px 12px 0;
+    display: block; }
   .pagination_previous a:before {
     content: "";
     font-family: "FontAwesome";
@@ -835,7 +835,8 @@ textarea {
     background-color: yellow;
     font-family: "Archivo Black", sans-serif;
     color: #000;
-    padding: 6px 12px; }
+    padding: 6px 12px 0;
+    display: block; }
   #sort-links .asc a:after {
     content: "";
     font-family: "FontAwesome";
@@ -1342,6 +1343,8 @@ textarea {
     margin-top: 6px;
     border-top: 1px solid;
     padding-top: 5px; }
+  .show #content > h1:first-child {
+    word-wrap: break-word; }
   /* @end */
   /* @group ----- Advanced Item Search ----- */
   button.add_search {
